--- a/boxes/src/App.css
+++ b/boxes/src/App.css
@@ -27,6 +27,23 @@
   color: rgb(83, 110, 197);
 }
 
+button {
+  padding: 0.5rem;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  background-color: orchid;
+  color: aliceblue;
+  border-color: transparent;
+}
+
+main button {
+  display: block;
+  margin: 1rem auto;
+}
+
 footer {
   margin-top: 20px;
 }
