--- a/speedgame/src/App.css
+++ b/speedgame/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e7c, #f7f56373, #e98009);
+  background-size: 180%;
+  animation: gradient 15s ease infinite;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #333;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+button {
+  padding: 1rem;
+  background-color: rgb(17, 129, 129);
   color: white;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  margin: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+h1,
+p {
+  font-family: "Righteous", cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center {
+  text-align: center;
 }
