first 8 steps done

--- a/speedgame/src/Components/Circle.css
+++ b/speedgame/src/Components/Circle.css
@@ -28,6 +28,12 @@
 .orange {
   background-color: orange;
 }
+.black {
+  background-color: black;
+}
+.white {
+  background-color: white;
+}
 
 #circles {
   display: flex;
