--- a/forms/src/App.css
+++ b/forms/src/App.css
@@ -1,10 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Antonio:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   background-color: rgb(19, 19, 56);
   color: white;
   font-size: 20px;
-  padding: 1rem;
+
   font-family: "Antonio", sans-serif;
   font-weight: 400;
 }
@@ -24,6 +31,10 @@ button {
   font-family: "Antonio", sans-serif;
   font-weight: 300;
   width: 245px;
+}
+
+form {
+  padding-left: 1rem;
 }
 
 form div {
@@ -56,6 +67,79 @@ form button {
 
 /*View*/
 .view {
+  margin-top: 30px;
   background-color: whitesmoke;
   color: rgb(19, 19, 56);
+}
+.view p {
+  border-bottom: 1px solid #e6b9698c;
+  padding: 1rem 0 0.5rem 3rem;
+}
+
+.view h1 {
+  padding-left: 3rem;
+}
+
+.view span {
+  font-family: "Caveat", cursive;
+}
+
+/*Popup*/
+.popup {
+  background-color: rgb(233, 213, 187);
+  position: fixed;
+  width: 90%;
+  height: 77%;
+  top: 0;
+
+  z-index: 999;
+  margin: 0 3%;
+  padding: 0.5rem 1rem;
+  color: rgb(37, 37, 155);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.popup p {
+  margin: 10px 0;
+}
+
+.popup h1 {
+  text-align: center;
+  color: green;
+}
+
+/* .popup:before {
+  content: "";
+  background-color: rgba(128, 128, 128, 0.384);
+  height: 200%;
+  width: 200%;
+  position: relative;
+  top: 0;
+  left: 0;
+} */
+
+#close {
+  position: absolute;
+  left: 90%;
+  bottom: 92%;
+  padding: 0;
+  width: 82px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.submit_buttons {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.green {
+  background-color: green;
 }
